// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a caption and a text 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      A caption
    </Text>
    <Text>
      , Some extra text
    </Text>
  </View>
</View>
`;

exports[`2. with a caption but no text 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      
    </Text>
    <Text>
      Some extra text
    </Text>
  </View>
</View>
`;

exports[`3. with a text but no caption 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      
    </Text>
    <Text>
      Some extra text
    </Text>
  </View>
</View>
`;

exports[`4. without a caption or a text 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      
    </Text>
    <Text>
      
    </Text>
  </View>
</View>
`;

exports[`5. with a twitter handle 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      A caption
    </Text>
    <Text>
      
    </Text>
    <View>
      <IconTwitter
        height={10}
        width={11}
      />
      <TextLink
        target="_blank"
        url="https://twitter.com/@twitter"
      >
        @twitter
      </TextLink>
    </View>
  </View>
</View>
`;
